# termin-collision

./: CMakeLists.txt  README.md  install.sh  mkdocs.yml
.github/workflows/: ci.yml
cmake/: termin_collisionConfig.cmake.in
cpp/bindings/: colliders_bindings.cpp  collision_bindings.cpp
docs/: MODULE_BOUNDARY.md  algorithms.md  architecture.md  c-api.md  colliders.md  collision-world.md  index.md  python-api.md
include/physics/: tc_collision.h  tc_collision_world.h
include/termin/colliders/: attached_collider.hpp  box_collider.hpp  capsule_collider.hpp  collider.hpp  collider_component.hpp  collider_primitive.hpp  colliders.hpp  convex_hull_collider.hpp  gjk.hpp  sphere_collider.hpp  union_collider.hpp
include/termin/collision/: bvh.hpp  collision.hpp  collision_world.hpp  collision_world_c.hpp  contact_manifold.hpp
include/termin_collision/: termin_collision.h
src/: termin_collision_runtime.c  termin_collision_version.cpp
src/termin/: tc_collision_c_api.cpp
src/termin/colliders/: collider_component.cpp
src/termin/collision/: collision_world_c.cpp  collision_world_scene.cpp  tc_collision_world_ext.c
tests/: tests_colliders.cpp  tests_collision.cpp  tests_convex_hull_collider.cpp  tests_gjk.cpp  tests_quickhull.cpp
